Aggiunte rotte e servizi di autenticazione, connessione al database remoto. Aggiunta documentazione /auth/login
