# api/routers/auth.route.js
@@ -1,0 +1,11 @@
+authService = require("../services/auth.serivice");
+
+const express = require('express');
+const router = express.Router();
+
+router.post('/login',authService.login);
+router.post('/register',authService.register);
+
+
+
+module.exports = router;
